--- a/application/styles/globals.css
+++ b/application/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 224 71% 4%;
+    --background: 0, 0%, 0%, 1;
     --foreground: 213 31% 91%;
 
     --muted: 223 47% 11%;
@@ -13,7 +13,7 @@
     --popover: 224 71% 4%;
     --popover-foreground: 215 20.2% 65.1%;
 
-    --card: 224 71% 4%;
+    --card: 0, 0%, 100%, 0.04;
     --card-foreground: 213 31% 91%;
 
     --border: 216 34% 17%;
